# Rooibos

./: .dockerignore  .gitignore  .travis-ci.sh  .travis-opam-init.sh  .travis.yml  Dockerfile  Makefile  README.md  rooibos.opam
examples/complex-if-example/: rewrite-template  source  template
examples/if-example/: rewrite-template  source  template
lib/: environment.ml  environment.mli  exceptions.ml  jbuild  lexer.mll  location.ml  location.mli  match.ml  match.mli  node.ml  node.mli  parser.mly  printer.ml  printer.mli  rewriter.ml  rewriter.mli  term.ml  term.mli  unify.ml  unify.mli
src/: .gitignore  environment.mli  fragment.ml  jbuild  lexer.mll  main.ml  parser.ml  parser.mly  rooibos.ml  syntax.ml  term.mli  unify.ml
test/: jbuild  test_rooibos.ml
