opam-version: "1.2"
version: "0.1"
maintainer: "squaresLab@gmail.com"
authors: ["rvt" "cst"]
homepage: "https://github.com/squaresLab/Rooibos"
bug-reports: "https://github.com/squaresLab/Rooibos/issues"
dev-repo: "https://github.com/squaresLab/Rooibos.git"
license: "Apache-2.0"
build: [["jbuilder" "build" "-p" name "-j" jobs "@install"]]
depends: [
  "menhir"
  "core"
  "ounit" {test}
]
